--- a/HealthApp/src/main/webapp/mainStyle.css
+++ b/HealthApp/src/main/webapp/mainStyle.css
@@ -5,6 +5,7 @@ body {
 	min-height: 100vh;
 	background-size: cover;
 	z-index: -1;
+	min-height: 100vh;
 }
 
 header {
@@ -54,4 +55,8 @@ input{
 
 main {
 	margin: 25px;
+}
+
+img {
+	max-width: 340px;
 }
