--- a/HealthApp/src/main/webapp/mainStyle.css
+++ b/HealthApp/src/main/webapp/mainStyle.css
@@ -57,6 +57,9 @@ main {
 	margin: 25px;
 }
 
-img {
-	max-width: 340px;
+img{
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    max-width: 400px;
+    max-height: 230px;
 }
