--- a/HealthApp/src/main/webapp/newWorkout.css
+++ b/HealthApp/src/main/webapp/newWorkout.css
@@ -63,7 +63,7 @@ input {
 main {
 	margin: 25px;
 }
-
+/* 
 img {
 	-ms-flex-negative: 0;
 	flex-shrink: 0;
@@ -112,7 +112,7 @@ img {
 	Black
 	w/
 	opacity
-}
+} */
 /* 
 Modal Content
 .modal-content {
