--- a/HealthApp/src/main/webapp/newWorkout.css
+++ b/HealthApp/src/main/webapp/newWorkout.css
@@ -21,7 +21,7 @@ header {
 	text-align: center;
 }
 
-body::before {
+ body::before {
 	content: "";
 	height: 100%;
 	width: 100%;
@@ -30,6 +30,9 @@ body::before {
 	left: 0;
 	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 0;
+} 
+.h5, h5 {
+	font-size: x-large;
 }
 
 footer {
@@ -55,16 +58,7 @@ footer {
 	justify-content: center;
 }
 
-header {
-	z-index: 1;
-	position: relative;
-	left: 0;
-	top: 0;
-	width: 100%;
-	background-color: white;
-	color: black;
-	text-align: center;
-}
+
 
 input {
 	position: relative;
@@ -74,19 +68,19 @@ input {
 	display: inline;
 }
 
-main {
+/* main {
 	margin: 25px;
-}
+} */
 
 
 
 
- img {
+/*  img {
 	-ms-flex-negative: 0;
 	flex-shrink: 0;
 	max-width: 400px;
 	max-height: 230px; 
- }
+ } */
 
 
 
@@ -149,4 +143,26 @@ The Close Button
 
 .modal-content {
 	width: 50%;
+}
+#myBtn{
+	color:black;
+}
+input{
+	color:black;
+}
+select{
+	color:black;
+}
+main{
+	opacity: 0.7;
+  filter: alpha(opacity=50);
+  background-image:
+		url("https://www.beautycolorcode.com/cdcdcd.png");
+	
+}
+section{
+	opacity: 0.9;
+	filter: alpha(opacity=90);
+	 background-image:
+		url("https://upload.wikimedia.org/wikipedia/commons/5/50/Black_colour.jpg");
 }
