edited home page cards now have anchors with a path to another page based on if user is in session

--- a/HealthApp/src/main/webapp/mainStyle.css
+++ b/HealthApp/src/main/webapp/mainStyle.css
@@ -73,6 +73,22 @@ img{
 	margin: auto;
 }
 
+/* .card:hover {
+	transform: 
+} */
 
+.fade:not(.show) {
+    opacity: 1;
+}
+
+.fade
+{
+        opacity:1;
+}
+
+.fade:hover
+{
+        opacity:0.5;
+} */
 
 
