css, profile buttons on header pages

--- a/HealthApp/src/main/webapp/userhome.css
+++ b/HealthApp/src/main/webapp/userhome.css
@@ -49,6 +49,14 @@ footer {
 	text-align: center;
 }
 
+.card-body form {
+	display: inline;
+}
+
+.card-body a {
+	display: inline;
+}
+
 /* .container-fluid h3 {
 	color: white;
 	background-color: darkolivegreen;
