--- a/HealthApp/src/main/webapp/newWorkout.css
+++ b/HealthApp/src/main/webapp/newWorkout.css
@@ -28,7 +28,7 @@ header {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.3);
 	z-index: 0;
 } 
 .h5, h5 {
@@ -59,17 +59,23 @@ footer {
 }
 
 
-
 input {
 	position: relative;
+  	  
 }
 
 #log {
 	display: inline;
 }
 
+.form-group {
+	width: 500px;
+}
 
-
+.input-form {
+	    display: flex;
+    flex-direction: column;
+}
 
 
 /*  img {
@@ -151,7 +157,7 @@ select{
 	color:black;
 }
 main{
-	opacity: 0.7;
+	opacity: .7;
   filter: alpha(opacity=50);
   background-image:
 		url("https://www.beautycolorcode.com/cdcdcd.png");
@@ -159,7 +165,7 @@ main{
 }
 section{
 	opacity: 0.9;
-	filter: alpha(opacity=90);
-	 background-image:
-		url("https://upload.wikimedia.org/wikipedia/commons/5/50/Black_colour.jpg");
+	filter: alpha(opacity=10);
+ 	 background-image:
+		url("https://upload.wikimedia.org/wikipedia/commons/5/50/Black_colour.jpg"); 
 }
